# kit-opt

./: Cargo.toml  pyproject.toml
examples/: mlp.rs  tsp.py  tsp.rs
examples/python/: mlp.py  tsp.py
python/kit_opt/: __init__.py
python/tests/: test_all.py
src/: data.rs  gils.rs  lib.rs  metaheuristic.rs  moves.rs  neighbourhood.rs  route.rs  solution.rs
src/mlp/: gils.rs  mod.rs  subseq.rs
src/mlp/constructions/: ci.rs  mod.rs  nn.rs
src/mlp/local_search/: local_search.rs  mod.rs  rvnd.rs
src/mlp/local_search/moves/: or_opt.rs  swap.rs  two_opt.rs
src/mlp/perturbations/: double_bridge.rs  mod.rs
src/tsp/: mod.rs
src/tsp/constructions/: ci.rs  nn.rs
src/tsp/local_search/: mod.rs  rvnd.rs
src/tsp/local_search/moves/: mod.rs  or_opt.rs  swap.rs  two_opt.rs
src/tsp/perturbations/: double_brigde.rs  mod.rs
