[package]
name = "kit_opt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kit_opt"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
rand = "0.9.2"
